--- a/couchlog/templates/couchlog/dashboard.html
+++ b/couchlog/templates/couchlog/dashboard.html
@@ -13,6 +13,7 @@
 {% block page_javascripts %}
     <script type="text/javascript" src="{{STATIC_URL}}couchlog/js/logtable.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}couchlog/js/submitredirect.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}couchlog/js/csrf_ajax.js"></script>
     <script type="text/javascript">
     // datatable configuration.
     $(document).ready(function() {
